# ClipBook

./: BUILD_INSTALL_GUIDE.md  package-lock.json
.claude-flow/metrics/: performance.json  task-metrics.json
.swarm/: memory.db
src/: data.tsx  db.tsx  i18n.ts  licensing.tsx  pref.tsx
src-cpp/src/: app_settings.h  app_settings_mac.h  app_settings_mac.mm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240101000000_initial_schema.sql  20240113000000_enhanced_schema.sql
src-tauri/src/: clipboard.rs  commands.rs  contract_tests.rs  database.rs  error.rs  lib.rs  models.rs  performance.rs  system.rs  tests.rs
src-tauri/src/mac_os/: clipboard_monitor.rs  mod.rs  shortcuts.rs  system_tray.rs
src/app/: App.tsx  Commands.tsx  HistoryPane.tsx  ItemInfoPane.tsx  ItemsInfoPane.tsx  StatusBar.tsx  VimStatusLine.tsx
src/hooks/: use-vim-mode.tsx
src/lib/: vim-navigation.ts
src/services/: clipboard.ts
src/settings/: General.tsx  History.tsx
