[package]
name = "clipbook"
version = "1.29.3"
description = "Clipboard history manager for macOS"
authors = ["Vladimir Ikryanov"]
license = "ClipBook License"
repository = "https://github.com/vladimir-ikryanov/ClipBook"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2"
clipboard = "0.5.0"
arboard = "3.4.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
futures = "0.3"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
cocoa = "0.25"
objc = "0.2"
block = "0.1"
